@@ -1,5 +1,11 @@
 2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Fix issues reported by Fedora reviewer.
+	* roboptim-core.spec.in: Fix many problems reported in ticket
+	https://bugzilla.redhat.com/show_bug.cgi?id=538820.
+
+2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add tar-ustar support in Automake to allow long filename.
 	* configure.ac: Add tar-ustar option in AM_INIT_AUTOMAKE
 	in order to package properly files with long names such	as
